WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52556
[Qt] fast/canvas/canvas-fillPath-gradient-shadow.html does not pass
https://bugs.webkit.org/show_bug.cgi?id=52556
Summary
[Qt] fast/canvas/canvas-fillPath-gradient-shadow.html does not pass
Helder Correia
Reported
2011-01-17 00:03:35 PST
The shadow color opacity needs to be set on the shadow painter. Additionally, the gradient brush should be transformed.
Attachments
Patch
(3.39 KB, patch)
2011-01-17 00:06 PST
,
Helder Correia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2011-01-17 00:06:21 PST
Created
attachment 79133
[details]
Patch
WebKit Commit Bot
Comment 2
2011-01-17 01:26:05 PST
Comment on
attachment 79133
[details]
Patch Clearing flags on attachment: 79133 Committed
r75927
: <
http://trac.webkit.org/changeset/75927
>
WebKit Commit Bot
Comment 3
2011-01-17 01:26:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug