2011-01-17  Helder Correia  <helder@sencha.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] fast/canvas/canvas-fillPath-gradient-shadow.html does not pass
        https://bugs.webkit.org/show_bug.cgi?id=52556

        The shadow color opacity needs to be set on the shadow painter.
        Additionally, the gradient brush should be transformed.

        * platform/qt/Skipped: Remove test from skipped list.
2011-01-17  Helder Correia  <helder@sencha.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] fast/canvas/canvas-fillPath-gradient-shadow.html does not pass
        https://bugs.webkit.org/show_bug.cgi?id=52556

        The shadow color opacity needs to be set on the shadow painter.
        Additionally, the gradient brush should be transformed.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::fillPath):

Canonical link: https://commits.webkit.org/66169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75927 268f45cc-cd09-0410-ab3c-d52691b4dbfc